--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/DanSiljer/sistema-de-cadastro#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "mongoose": "^6.5.2",
-    "prompt-sync": "^4.2.0"
+    "next": "^12.2.5",
+    "prompt-sync": "^4.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
